[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/theme/fonts/TTNorms/TTNorms-BlackItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://home/PregameSetup.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/home_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/design/truckhunt_kv.png" type="Texture" id=4]
[ext_resource path="res://home/Home.gd" type="Script" id=6]
[ext_resource path="res://assets/theme/fonts/black_slanted_XXL.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/design/truck.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_2.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_3.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/music/moose.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/music/Ludum Dare 28 - Track 1_loop.wav" type="AudioStream" id=13]
[ext_resource path="res://home/thumb_level_mission.tres" type="Texture" id=14]
[ext_resource path="res://assets/sounds/music/track_upbeat.wav" type="AudioStream" id=15]
[ext_resource path="res://home/LevelBtn.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_confirm_NFF-home-switch-on.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_focus_change.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/_insp_nomada.png" type="Texture" id=19]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_5.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/btn_cancel_NFF-home-switch-off.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/tutorial_stage_a_NFF-glocken-bad.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/sounds/music/track_tictac.wav" type="AudioStream" id=23]
[ext_resource path="res://home/SoundManagerHome.gd" type="Script" id=24]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_1.wav" type="AudioStream" id=25]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/key_4.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/music/POL-the-foyer-short.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/music/Patreon Goal Reward Loops - Track 08_loop.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sounds/music/457363__3m4__trap-beat-2.mp3" type="AudioStream" id=30]
[ext_resource path="res://assets/sounds/sfx/_pa/gui/screen_slide.wav" type="AudioStream" id=31]
[ext_resource path="res://home/LevelMenu.gd" type="Script" id=32]
[ext_resource path="res://common/shaders/desaturate_texture.gdshader" type="Shader" id=34]
[ext_resource path="res://home/SelectGames.gd" type="Script" id=35]
[ext_resource path="res://home/thumb_level_training.tres" type="Texture" id=37]
[ext_resource path="res://home/thumb_level_race.tres" type="Texture" id=38]
[ext_resource path="res://assets/theme/fonts/button_big.tres" type="DynamicFont" id=44]

[sub_resource type="Gradient" id=825]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture2D" id=826]
gradient = SubResource( 825 )
fill_from = Vector2( 0.4875, 1 )
fill_to = Vector2( 0.470833, 0 )

[sub_resource type="DynamicFont" id=792]
size = 400
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=793]
size = 504
font_data = ExtResource( 1 )

[sub_resource type="ShaderMaterial" id=824]
shader = ExtResource( 34 )
shader_param/saturation = 1.0

[sub_resource type="Gradient" id=815]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 0.584314 )

[sub_resource type="GradientTexture2D" id=816]
gradient = SubResource( 815 )
fill_from = Vector2( 0.4875, 1 )
fill_to = Vector2( 0.470833, 0 )

[node name="Home" type="Node"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 128.0, 5760.0, 1328.0, 720.0, 1392.0, 1152.0 ],
"_edit_vertical_guides_": [ 10240.0, 20480.0, 15360.0, 7680.0, 5120.0, -2560.0, 192.0, 2368.0, 1280.0, 128.0, 2432.0 ]
}

[node name="Graphics" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Graphics"]
margin_right = 2560.0
margin_bottom = 1440.0
color = Color( 0.92549, 0.313726, 0.317647, 1 )

[node name="KV" type="Panel" parent="Graphics"]
margin_right = 2560.0
margin_bottom = 1440.0
rect_min_size = Vector2( 2560, 1440 )
rect_clip_content = true
theme = ExtResource( 3 )

[node name="TruckhuntKv" type="Sprite" parent="Graphics/KV"]
position = Vector2( 1276, 822 )
texture = ExtResource( 4 )

[node name="InspNomada" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( 12133.2, 1464.25 )
texture = ExtResource( 19 )

[node name="Grad" type="TextureRect" parent="Graphics"]
visible = false
modulate = Color( 1, 1, 1, 0.0745098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 899.0
margin_right = 2573.0
margin_bottom = 1464.0
texture = SubResource( 826 )
expand = true

[node name="TitleShadow" type="Node2D" parent="Graphics"]
visible = false
modulate = Color( 0, 0, 0, 0.101961 )
position = Vector2( -164, 46 )

[node name="GameTitle" type="Label" parent="Graphics/TitleShadow"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 126.0
margin_top = 97.0
margin_right = 1224.0
margin_bottom = 476.0
custom_fonts/font = ExtResource( 7 )
text = "NITRO"

[node name="GameTitle2" type="Label" parent="Graphics/TitleShadow"]
visible = false
modulate = Color( 1, 1, 1, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 375.0
margin_top = 15.5
margin_right = 1226.0
margin_bottom = 771.5
custom_fonts/font = SubResource( 792 )
text = "20"

[node name="GameTitle4" type="Label" parent="Graphics/TitleShadow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 305.0
margin_top = -23.0
margin_right = 2089.0
margin_bottom = 733.0
custom_fonts/font = SubResource( 793 )
text = "NITRO"

[node name="GameTitle3" type="Label" parent="Graphics/TitleShadow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1611.0
margin_top = 448.0
margin_right = 2433.0
margin_bottom = 838.0
custom_fonts/font = SubResource( 792 )
text = "2078"

[node name="Title" type="Node2D" parent="Graphics"]
position = Vector2( -172, 22 )

[node name="GameTitle3" type="Label" parent="Graphics/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1554.0
margin_top = 212.0
margin_right = 2550.0
margin_bottom = 684.0
custom_fonts/font = SubResource( 792 )
text = "2078"

[node name="GameTitle5" type="Label" parent="Graphics/Title"]
modulate = Color( 0.176471, 0.141176, 0.0627451, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 2054.0
margin_top = 196.0
margin_right = 2534.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 792 )
text = "78"

[node name="GameTitle7" type="Label" parent="Graphics/Title"]
modulate = Color( 0.94902, 0.894118, 0.768627, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1538.0
margin_top = 196.0
margin_right = 2070.0
margin_bottom = 668.0
custom_fonts/font = SubResource( 792 )
text = "20"

[node name="GameTitle4" type="Label" parent="Graphics/Title"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 300.0
margin_top = -16.0
margin_right = 2084.0
margin_bottom = 740.0
custom_fonts/font = SubResource( 793 )
text = "NITRO"

[node name="Truck" type="Sprite" parent="Graphics"]
position = Vector2( 1301, 496 )
texture = ExtResource( 9 )

[node name="Gui" type="Control" parent="."]
margin_right = 2560.0
margin_bottom = 1440.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MainMenu" type="VBoxContainer" parent="Gui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = 350.0
margin_right = 269.0
margin_bottom = 643.0
theme = ExtResource( 3 )
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="Gui/MainMenu"]
margin_left = 173.0
margin_top = 12.0
margin_right = 365.0
margin_bottom = 98.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 44 )
text = "PLAY"

[node name="LevelsBtn" type="Button" parent="Gui/MainMenu"]
margin_left = 4.0
margin_top = 106.0
margin_right = 534.0
margin_bottom = 192.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 44 )
text = "SELECT GAME"

[node name="QuitBtn" type="Button" parent="Gui/MainMenu"]
margin_left = 206.0
margin_top = 200.0
margin_right = 333.0
margin_bottom = 280.0
grow_horizontal = 2
rect_min_size = Vector2( 0, 80 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
text = "QUIT"

[node name="PregameSetup" parent="Gui" instance=ExtResource( 2 )]
visible = false

[node name="SelectGames" type="Control" parent="Gui"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = ExtResource( 3 )
script = ExtResource( 35 )

[node name="TextureRect" type="TextureRect" parent="Gui/SelectGames"]
visible = false
material = SubResource( 824 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4056.0
margin_top = -1960.0
margin_right = -4056.0
margin_bottom = -1960.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 4 )
expand = true

[node name="ColorRect" type="ColorRect" parent="Gui/SelectGames"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.439216 )

[node name="Grad" type="TextureRect" parent="Gui/SelectGames"]
modulate = Color( 1, 1, 1, 0.756863 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 816 )
expand = true
flip_v = true

[node name="Label" type="Label" parent="Gui/SelectGames"]
modulate = Color( 1, 1, 1, 0.52549 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -151.5
margin_top = 272.0
margin_right = 151.5
margin_bottom = 367.0
grow_horizontal = 0
custom_fonts/font = ExtResource( 44 )
text = "Games"
align = 1
uppercase = true

[node name="LevelMenu" type="HBoxContainer" parent="Gui/SelectGames"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -684.0
margin_top = -280.0
margin_right = 684.0
margin_bottom = 280.0
grow_horizontal = 2
custom_constants/separation = 24
alignment = 2
script = ExtResource( 32 )
__meta__ = {
"_edit_group_": true
}

[node name="LevelBtn" parent="Gui/SelectGames/LevelMenu" instance=ExtResource( 16 )]
margin_bottom = 560.0
focus_mode = 2
toggle_mode = false
enabled_focus_mode = 2

[node name="TextureRect" parent="Gui/SelectGames/LevelMenu/LevelBtn" index="2"]
texture = ExtResource( 37 )

[node name="LevelBtn2" parent="Gui/SelectGames/LevelMenu" instance=ExtResource( 16 )]
margin_left = 464.0
margin_right = 904.0
margin_bottom = 560.0
focus_mode = 2
toggle_mode = false
enabled_focus_mode = 2

[node name="TextureRect" parent="Gui/SelectGames/LevelMenu/LevelBtn2" index="2"]
texture = ExtResource( 38 )

[node name="Title" parent="Gui/SelectGames/LevelMenu/LevelBtn2/Focused" index="3"]
text = "Earn
to race"

[node name="Desc" parent="Gui/SelectGames/LevelMenu/LevelBtn2/Focused" index="4"]
margin_top = -53.0
margin_bottom = 70.0

[node name="LevelBtn3" parent="Gui/SelectGames/LevelMenu" instance=ExtResource( 16 )]
margin_left = 928.0
margin_right = 1368.0
margin_bottom = 560.0
focus_mode = 2
toggle_mode = false
enabled_focus_mode = 2

[node name="TextureRect" parent="Gui/SelectGames/LevelMenu/LevelBtn3" index="2"]
texture = ExtResource( 14 )

[node name="Title" parent="Gui/SelectGames/LevelMenu/LevelBtn3/Focused" index="3"]
text = "MISSION"

[node name="Menu" type="VBoxContainer" parent="Gui/SelectGames"]
margin_left = 1053.0
margin_top = 1082.0
margin_right = 1506.0
margin_bottom = 1260.0
custom_constants/separation = 32
__meta__ = {
"_edit_group_": true
}

[node name="PlayBtn" type="Button" parent="Gui/SelectGames/Menu"]
margin_right = 453.0
margin_bottom = 86.0
grow_horizontal = 2
focus_neighbour_left = NodePath("../BackBtn")
custom_colors/icon_color_focus = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 44 )
text = "PLAY"

[node name="BackBtn" type="Button" parent="Gui/SelectGames/Menu"]
margin_top = 118.0
margin_right = 453.0
margin_bottom = 176.0
grow_horizontal = 2
focus_neighbour_right = NodePath("../PlayBtn")
text = "BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Gui")

[node name="Sounds" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 24 )

[node name="HomeMusic" type="Node2D" parent="Sounds"]

[node name="Track8_5" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 12 )
volume_db = -12.0

[node name="Track12_5" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 30 )
volume_db = -6.0

[node name="Track4_4" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 29 )
volume_db = -6.0

[node name="Track1_3" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 13 )
volume_db = -7.0

[node name="Track5_3-4" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 23 )
volume_db = -7.0

[node name="Track6_3-4" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 15 )
volume_db = -10.0

[node name="Track19_4" type="AudioStreamPlayer" parent="Sounds/HomeMusic"]
stream = ExtResource( 27 )
volume_db = -5.0

[node name="GuiSfx" type="Node2D" parent="Sounds"]

[node name="Typing" type="Node2D" parent="Sounds/GuiSfx"]

[node name="Key1" type="AudioStreamPlayer" parent="Sounds/GuiSfx/Typing"]
stream = ExtResource( 25 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key2" type="AudioStreamPlayer" parent="Sounds/GuiSfx/Typing"]
stream = ExtResource( 10 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key3" type="AudioStreamPlayer" parent="Sounds/GuiSfx/Typing"]
stream = ExtResource( 11 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key4" type="AudioStreamPlayer" parent="Sounds/GuiSfx/Typing"]
stream = ExtResource( 26 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key5" type="AudioStreamPlayer" parent="Sounds/GuiSfx/Typing"]
stream = ExtResource( 20 )
volume_db = -15.0
pitch_scale = 0.6

[node name="BtnFocus" type="AudioStreamPlayer" parent="Sounds/GuiSfx"]
stream = ExtResource( 18 )
volume_db = -30.0
pitch_scale = 0.7

[node name="BtnConfirm" type="AudioStreamPlayer" parent="Sounds/GuiSfx"]
stream = ExtResource( 17 )
volume_db = -25.0

[node name="BtnCancel" type="AudioStreamPlayer" parent="Sounds/GuiSfx"]
stream = ExtResource( 21 )
volume_db = -25.0

[node name="ScreenSlide" type="AudioStreamPlayer" parent="Sounds/GuiSfx"]
stream = ExtResource( 31 )
pitch_scale = 0.9

[node name="TutorialStageDone" type="AudioStreamPlayer" parent="Sounds/GuiSfx"]
stream = ExtResource( 22 )
volume_db = -13.0
pitch_scale = 1.1

[connection signal="pressed" from="Gui/MainMenu/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="Gui/MainMenu/LevelsBtn" to="." method="_on_LevelsBtn_pressed"]
[connection signal="pressed" from="Gui/MainMenu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Gui/SelectGames/Menu/PlayBtn" to="Gui/SelectGames" method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="Gui/SelectGames/Menu/BackBtn" to="Gui/SelectGames" method="_on_BackBtn_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Gui/SelectGames/LevelMenu/LevelBtn"]
[editable path="Gui/SelectGames/LevelMenu/LevelBtn2"]
[editable path="Gui/SelectGames/LevelMenu/LevelBtn3"]
